[tool.poetry]
name = "judger"
version = "0.1.0"
description = ""
authors = ["He Jun <freefcw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pip = "^22.1.2"
toml = "^0.10.2"
docker = "^5.0.3"
pika = "^1.3.0"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true